Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/StringsInSwitch/BadlyTypedLabel2.out
BadlyTypedLabel2.java:14:14: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.math.RoundingMode, java.lang.String)
1 error
